--- a/index.html
+++ b/index.html
@@ -3,27 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Relive Editor</title>
-    <style type="text/css" media="screen">
-        #editor {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
+    <style>
+        html, body {
+            overflow: hidden;
+            margin: 0;
+            height: 100%;
+        }
+
+        .ace_gutter {
+            background: white !important;
+            color: #DDD !important;
+        }
+
+        .ace_gutter-active-line {
+            background: white !important;
+        }
+
+        .ace_fold {
+            background-color: #B0B !important;
+        }
+
+        .ace_active-line {
+            background-color: #F7F7F7 !important;
+        }
+
+        .ace_cursor {
+            color: blue !important;
+        }
+
+        .ace_scroller.ace_scroll-left {
+            box-shadow: none !important;
         }
     </style>
 </head>
 <body>
-
-<div id="editor">
-const a = [1,2,3];
-
-a.forEach(x => console.log(x));
-
-for (const x of a) {
-    console.log(x);
-}
-</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"></script>
 <script src="build/index.js"></script>
