add ability to close tabs

--- a/index.html
+++ b/index.html
@@ -27,12 +27,28 @@
             background-color: #F7F7F7 !important;
         }
 
+        .ace_selection {
+            background-color: #BDF !important;
+        }
+
         .ace_cursor {
             color: blue !important;
         }
 
         .ace_scroller.ace_scroll-left {
             box-shadow: none !important;
+        }
+
+        .ace_string {
+            color: #C00 !important;
+        }
+
+        .ace_type {
+            color: #00C !important;
+        }
+
+        .ace_numeric {
+            color: #00F !important;
         }
     </style>
 </head>
