compile JavaScript using babel + debounce for linting and compiling

--- a/iframe.html
+++ b/iframe.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="iframe.js"></script>
+    <script src="lib/regenerator-runtime.js"></script>
+    <script src="build/iframe.js"></script>
     <style></style>
 </head>
 <body>
