handles updating multiple CSS files and removing/adding CSS files to an HTML file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Relive Editor</title>
+    <title>Tryclide</title>
     <style>
         html, body {
             overflow: hidden;
